# Mines-Architecture

./: CMakeLists.txt  README.md  cmd_parser.cpp  cmd_parser.h  gpu.cu  gpu.h  main.cpp  parallel.cpp  parallel.h  run_test.ps1  run_test1.sh  sequential.cpp  sequential.h  utils.h  vectorial.cpp  vectorial.h
